modified home y navbar to avoid overlapping hero content

--- a/src/app/layouts/common-layout/common-layout.component.css
+++ b/src/app/layouts/common-layout/common-layout.component.css
@@ -14,6 +14,7 @@
     border-end-start-radius: 40px;
     margin-bottom: 2rem ;
     padding: 25px;
+    z-index: 2;
 }
 
 .nav-item, .theme-item {
@@ -102,6 +103,8 @@ main {
 .theme-btn{
     display: none;
 }
+
+
 
 
 @media screen and (max-width: 600px){
